@@ -2,12 +2,12 @@ package com.hartwig.pipeline.tertiary.amber;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
 import java.util.List;
 
 import com.hartwig.pipeline.datatypes.DataType;
-import com.hartwig.pipeline.metadata.AddDatatypeToFile;
+import com.hartwig.pipeline.metadata.AddDatatype;
 import com.hartwig.pipeline.metadata.ApiFileOperation;
+import com.hartwig.pipeline.metadata.ArchivePath;
 import com.hartwig.pipeline.metadata.SomaticRunMetadata;
 import com.hartwig.pipeline.report.Folder;
 import com.hartwig.pipeline.stages.Stage;
@@ -30,12 +30,15 @@ public class AmberTest extends TertiaryStageTest<AmberOutput> {
     }
 
     @Override
-    protected List<String> expectedCommands() {
-        return Collections.singletonList("java -Xmx32G -cp /opt/tools/amber/3.4/amber.jar com.hartwig.hmftools.amber.AmberApplication "
-                + "-reference reference -reference_bam /data/input/reference.bam -tumor tumor -tumor_bam /data/input/tumor.bam -output_dir "
-                + "/data/output -threads $(grep -c '^processor' /proc/cpuinfo) -ref_genome "
-                + "/opt/resources/reference_genome/37/Homo_sapiens.GRCh37.GATK.illumina.fasta "
-                + "-loci /opt/resources/amber/37/GermlineHetPon.hg19.vcf.gz");
+    protected List<ApiFileOperation> expectedFurtherOperations() {
+        String basenameSnpcheck = TestInputs.REG_GENOME_37_RESOURCE_FILES.amberSnpcheck()
+                .substring(TestInputs.REG_GENOME_37_RESOURCE_FILES.amberSnpcheck().lastIndexOf("/") + 1);
+        return List.of(new AddDatatype(DataType.AMBER,
+                        TestInputs.defaultSomaticRunMetadata().barcode(),
+                        new ArchivePath(Folder.root(), Amber.NAMESPACE, "tumor.amber.baf.tsv")),
+                new AddDatatype(DataType.AMBER_SNPCHECK,
+                        TestInputs.defaultSomaticRunMetadata().barcode(),
+                        new ArchivePath(Folder.root(), Amber.NAMESPACE, basenameSnpcheck)));
     }
 
     @Override
@@ -52,7 +55,7 @@ public class AmberTest extends TertiaryStageTest<AmberOutput> {
 
     @Override
     protected void setupPersistedDataset() {
-        persistedDataset.addPath(DataType.B_ALLELE_FREQUENCY, "amber");
+        persistedDataset.addPath(DataType.AMBER, "amber");
     }
 
     @Override
@@ -61,11 +64,12 @@ public class AmberTest extends TertiaryStageTest<AmberOutput> {
     }
 
     @Override
-    protected List<ApiFileOperation> expectedFurtherOperations() {
-        return List.of(new AddDatatypeToFile(DataType.B_ALLELE_FREQUENCY,
-                Folder.root(),
-                Amber.NAMESPACE,
-                "tumor.amber.baf.tsv",
-                TestInputs.defaultSomaticRunMetadata().barcode()));
+    protected List<String> expectedCommands() {
+        return List.of("java -Xmx32G -cp /opt/tools/amber/3.4/amber.jar com.hartwig.hmftools.amber.AmberApplication "
+                        + "-reference reference -reference_bam /data/input/reference.bam -tumor tumor -tumor_bam /data/input/tumor.bam -output_dir "
+                        + "/data/output -threads $(grep -c '^processor' /proc/cpuinfo) -ref_genome "
+                        + "/opt/resources/reference_genome/37/Homo_sapiens.GRCh37.GATK.illumina.fasta "
+                        + "-loci /opt/resources/amber/37/GermlineHetPon.hg19.vcf.gz",
+                "cp /opt/resources/amber/37/Amber.snpcheck.hg19.vcf /data/output");
     }
 }
